--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,10 +15,27 @@
   <button>+ Add News</button>
 </a>
 
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>
+  Sesi terakhir login: {{ last_login }}
+</h5>
+
+<a href="?filter=all">
+  <button type="button">All Articles</button>
+</a>
+<a href="?filter=my">
+  <button type="button">My Articles</button>
+</a> 
+
 <hr>
 
 {% if not news_list %}
-<p>Belum ada data berita pada football news.</p>
+<p>
+  Belum ada data berita pada football news.
+</p>
 {% else %}
 
 {% for news in news_list %}
